# KANHA

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CODEOWNERS  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  backup_file.sql  configure_db.sh  entrypoint.sh  marketing.md  pyproject.toml  requirements.txt  setup.py  start_application.sh  tasks.md
.github/workflows/: ci.yml  deploy.yml  scheduled.yml
KANHA_postman_collection/: KANHA_postman_collection.json
alembic/: env.py
app/: main.py
app/clients/: __init__.py  base.py  factory.py  utils.py
app/config/: __init__.py  aws_config.py  db_config.py  general_config.py  openai_config.py
app/control_panel/: __init__.py  manager.py  settings.py
app/dao/: __init__.py  database_config.py
app/framework/: __init__.py
app/prompts/: __init__.py
app/routes/: __init__.py  route_cache.py  route_contact.py  route_db_healthcheck.py  route_evaluation.py  route_feedback.py  route_healthcheck.py  route_question.py
app/services/: __init__.py
app/utils/: __init__.py  constants.py
cookbook/version1/: difficulties.md  index.md
infra/dev/: Dockerfile  docker-compose.yml
infra/prod/: Dockerfile
infra/terraform/: main.tf  variables.tf
migrations/: README  env.py
migrations/versions/: 1448656fe102_added_multiple_choice_and_problem_.py  193fae0f6628_made_changes_in_mcq_model.py  195638ed9ee6_changes_in_models.py  3cd87035f6bb_a.py  46cb169152f1_changes_in_mcq_model.py  (+17 more)
src/: constants.py  main.py  prompts.py  question_generation.py
src/dao/: tests.py  (+6 more)
tests/: test_main.py
(+236 files in other folders)
