[tool.poetry]
name = "kanha"
version = "0.1.0"
description = "Kustomized Assessment & NLP-based Hyperpersonalized Audit"
authors = ["Ankit Pakhale <akp3067@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# fastapi = "^0.98.0"
# uvicorn = "^0.23.0"
openai = "^0.28.0"
# sqlalchemy = "^2.0"
# psycopg2-binary = "^2.9"
# pydantic = "^2.0"
# numpy = "^1.25"
# pandas = "^2.1"
# requests = "^2.31"
# tqdm = "^4.66"


[tool.poetry.dev-dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
black = "^23.9"
isort = "^5.12"
flake8 = "^6.1"
mypy = "^1.5"

# [build-system]
# requires = ["poetry-core>=1.5.0"]
# build-backend = "poetry.core.masonry.api"
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=kanha --cov-report=html --cov-report=term"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"

[tool.mypy]
files = "src"
ignore_missing_imports = true
strict = true
